--- a/superset/templates/superset/public_welcome.html
+++ b/superset/templates/superset/public_welcome.html
@@ -19,5 +19,5 @@ under the License.
 {% extends "appbuilder/base.html" %}
 
 {% block content %}
-<h2><center>Welcome to Apache Superset</center></h2>
+<h2><center>Welcome to CRISH Health DSS</center></h2>
 {% endblock %}
