--- a/superset/templates/appbuilder/general/security/login_db.html
+++ b/superset/templates/appbuilder/general/security/login_db.html
@@ -188,7 +188,7 @@
 
         {# Add top logos #}
         <div class="top-logos">
-          <span class="crish-logo">CRISH</span>
+            <img src="{{ url_for('static', filename='assets/images/crish/RDTL.svg') }}" alt="RDTL Logo">
           <img src="{{ url_for('static', filename='assets/images/crish/DNMG.svg') }}" alt="DNMG Logo">
         </div>
 
